[tool.poetry]
name = "cdk-build-lambda-layer"
version = "0.1.0"
description = ""
authors = ["Daniel Donovan <spitfiredd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.101.1"
boto3 = "^1.28.65"
importlib-metadata = "^6.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
